--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Set up iOS package repo
         run: |
-          git clone git@github.com:coming-chat/wallet-swift-package.git Wallet-iOS
+          git clone https://github.com/coming-chat/wallet-swift-package.git Wallet-iOS
       - name: Build iOS sdk & push
         run: |
           export GOPRIVATE=github.com/coming-chat/go-defi-sdk && make iosBuildAndPublish v=test-0.0.1
