--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,7 @@ jobs:
       - name: Set up go mobile
         run: |
           go install golang.org/x/mobile/cmd/gomobile@latest
+          gomobile init
       - name: Checkout
         uses: actions/checkout@v3
       - name: Set up iOS package repo
