--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,7 +30,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Set up iOS package repo
         run: |
-          git clone https://github.com/coming-chat/wallet-swift-package.git Wallet-iOS
+          git clone https://github.com/coming-chat/wallet-swift-package.git ./out/Wallet-iOS
       - name: Build iOS sdk & push
         run: |
-          export GOPRIVATE=github.com/coming-chat/go-defi-sdk && set GO111MODULE=off && make iosBuildAndPublish v=test-0.0.1
+          git config --global url."git@github.com".insteadOf "https://github.com"
+          export GOPRIVATE=github.com/coming-chat/go-defi-sdk && make iosBuildAndPublish v=test-0.0.1
