--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,13 +15,9 @@ jobs:
         with:
           go-version: 1.19
       - name: Set up git context
-        uses: oleksiyrudenko/gha-git-credentials@v2.1
+        uses: de-vri-es/setup-git-credentials@v2
         with:
-          global: true
-          name: "github-actions[bot]"
-          email: "41898282+github-actions[bot]@users.noreply.github.com"
-          actor: "github-actions[bot]"
-          token: "${{ secrets.GIT_TOKEN }}"
+          credentials: ${{ secrets.GIT_TOKEN }}
       - name: Set up go mobile
         run: |
           go install golang.org/x/mobile/cmd/gomobile@latest
@@ -38,5 +34,4 @@ jobs:
           limit-access-to-users: gkirito
       - name: Build iOS sdk & push
         run: |
-          git clone https://github.com/coming-chat/go-defi-sdk.git 
           export GOPRIVATE=github.com/coming-chat/go-defi-sdk && make iosBuildAndPublish v=test-0.0.1
