--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,11 +6,51 @@ on:
       - "**"
 
 jobs:
-  build-ios:
-    name: build wallet sdk for iOS
-    runs-on: macos-latest
+  # build-ios:
+  #   name: build wallet sdk for iOS
+  #   runs-on: macos-latest
+
+  #   steps:
+  #     - name: Set up Go
+  #       uses: actions/setup-go@v3
+  #       with:
+  #         go-version: 1.19
+  #     - name: Set up git context
+  #       uses: de-vri-es/setup-git-credentials@v2
+  #       with:
+  #         credentials: ${{ secrets.GIT_TOKEN }}
+  #     - name: Set up go mobile
+  #       run: |
+  #         go install golang.org/x/mobile/cmd/gomobile@latest
+  #         gomobile init
+  #     - name: Checkout
+  #       uses: actions/checkout@v3
+  #     - name: Set up git user & iOS package repo
+  #       run: |
+  #         git config --global user.name "github-actions[bot]"
+  #         git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+  #         git clone https://github.com/coming-chat/wallet-swift-package.git ./out/Wallet-iOS
+  #     - name: Build iOS sdk & push
+  #       run: |
+  #         export GOPRIVATE=github.com/coming-chat/go-defi-sdk && make iosBuildAndPublish v=${{ github.ref_name }}
+
+  build-android:
+    name: build wallet sdk for Android
+    runs-on: ubuntu-latest
 
     steps:
+      - name: set up JDK 11
+        uses: actions/setup-java@v3
+        with:
+          java-version: "11"
+          distribution: "temurin"
+          cache: gradle
+      - name: Setup Android SDK
+        uses: android-actions/setup-android@v2
+      # - uses: nttld/setup-ndk@v1
+      #   id: setup-ndk
+      #   with:
+      #     ndk-version: r23.1
       - name: Set up Go
         uses: actions/setup-go@v3
         with:
@@ -25,11 +65,16 @@ jobs:
           gomobile init
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Set up git user & iOS package repo
+      - name: Set up git user & Android package repo
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git clone https://github.com/coming-chat/wallet-swift-package.git ./out/Wallet-iOS
-      - name: Build iOS sdk & push
-        run: |
-          export GOPRIVATE=github.com/coming-chat/go-defi-sdk && make iosBuildAndPublish v=${{ github.ref_name }}
+          git clone https://github.com/coming-chat/wallet-sdk-android.git ./out/wallet-sdk-android
+      - name: Setup upterm session
+        uses: lhotari/action-upterm@v1
+        with:
+          limit-access-to-actor: true
+          limit-access-to-users: gkirito
+      # - name: Build Android sdk & push
+      #   run: |
+      #     export ANDROID_HOME= && export ANDROID_NDK_HOME=${{ steps.setup-ndk.outputs.ndk-path }} && export GOPRIVATE=github.com/coming-chat/go-defi-sdk  && make androidBuildAndPublish v=${{ github.ref_name }} t=1
