--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,33 +6,33 @@ on:
       - "**"
 
 jobs:
-  # build-ios:
-  #   name: build wallet sdk for iOS
-  #   runs-on: macos-latest
+  build-ios:
+    name: build wallet sdk for iOS
+    runs-on: macos-latest
 
-  #   steps:
-  #     - name: Set up Go
-  #       uses: actions/setup-go@v3
-  #       with:
-  #         go-version: 1.19
-  #     - name: Set up git context
-  #       uses: de-vri-es/setup-git-credentials@v2
-  #       with:
-  #         credentials: ${{ secrets.GIT_TOKEN }}
-  #     - name: Set up go mobile
-  #       run: |
-  #         go install golang.org/x/mobile/cmd/gomobile@latest
-  #         gomobile init
-  #     - name: Checkout
-  #       uses: actions/checkout@v3
-  #     - name: Set up git user & iOS package repo
-  #       run: |
-  #         git config --global user.name "github-actions[bot]"
-  #         git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-  #         git clone https://github.com/coming-chat/wallet-swift-package.git ./out/Wallet-iOS
-  #     - name: Build iOS sdk & push
-  #       run: |
-  #         export GOPRIVATE=github.com/coming-chat/go-defi-sdk && make iosBuildAndPublish v=${{ github.ref_name }}
+    steps:
+      - name: Set up Go
+        uses: actions/setup-go@v3
+        with:
+          go-version: 1.19
+      - name: Set up git context
+        uses: de-vri-es/setup-git-credentials@v2
+        with:
+          credentials: ${{ secrets.GIT_TOKEN }}
+      - name: Set up go mobile
+        run: |
+          go install golang.org/x/mobile/cmd/gomobile@latest
+          gomobile init
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Set up git user & iOS package repo
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git clone https://github.com/coming-chat/wallet-swift-package.git ./out/Wallet-iOS
+      - name: Build iOS sdk & push
+        run: |
+          export GOPRIVATE=github.com/coming-chat/go-defi-sdk && make iosBuildAndPublish v=${{ github.ref_name }}
 
   build-android:
     name: build wallet sdk for Android
