--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
         run: |
           git config --global user.name "github-actions[bot]"
           git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
-          git clone https://github.com/coming-chat/wallet-swift-package.git ./out/Wallet-iOS
+          git clone -b main --depth=1 https://github.com/coming-chat/wallet-swift-package.git ./out/Wallet-iOS
       - name: Build iOS sdk & push
         run: |
           export GOPRIVATE=github.com/coming-chat/go-defi-sdk && make iosBuildAndPublish v=${{ github.ref_name }}
