--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,7 +21,7 @@ jobs:
           credentials: ${{ secrets.GIT_TOKEN }}
       - name: Set up go mobile
         run: |
-          go install golang.org/x/mobile/cmd/gomobile@latest
+          go install golang.org/x/mobile/cmd/gomobile@fa6bcb0768357a704787d34228c0cd44d0ed58c7
           gomobile init
       - name: Checkout
         uses: actions/checkout@v3
