--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,9 @@ jobs:
         uses: de-vri-es/setup-git-credentials@v2
         with:
           credentials: ${{ secrets.GIT_TOKEN }}
+      - name: Tidy go mod
+        run: |
+          go mod tidy
       - name: Set up go mobile
         run: |
           go install golang.org/x/mobile/cmd/gomobile@latest
@@ -57,6 +60,9 @@ jobs:
         uses: de-vri-es/setup-git-credentials@v2
         with:
           credentials: ${{ secrets.GIT_TOKEN }}
+      - name: Tidy go mod
+        run: |
+          go mod tidy
       - name: Set up go mobile
         run: |
           go install golang.org/x/mobile/cmd/gomobile@latest
